# wire

./: .gitignore  README.md  check-install.js  jest.config.mjs  package-lock.json  package.json  pyproject.toml  test-errors.txt  test-output.txt  tsconfig.json  wire.config.example.toml  wire.config.toml
.github/workflows/: ci.yml
src/cli/: wire.ts
src/cli/commands/: diff.ts  list.ts  mock.ts  record.ts  snapshot.ts
src/core/: config.ts  diff.ts  index.ts  mock.ts  schema.ts  snapshot.ts
src/types/: sql.js.d.ts
tests/: diff.test.ts  mock.test.ts  schema.test.ts  test_diff.py  test_mock.py  test_mockgen.py  test_schema.py
