[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wire"
version = "0.1.0"
description = "Universal API Diff Engine — catch breaking API changes before they hit prod"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "effestier" }]
keywords = ["api", "diff", "schema", "testing", "ci", "breaking-changes", "json-schema"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "requests>=2.31",
    "tomlkit>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
wire = "wire.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.urls]
Homepage = "https://github.com/effestier/wire"
Repository = "https://github.com/effestier/wire"
